--- a/assets/css/components/btn.css
+++ b/assets/css/components/btn.css
@@ -10,17 +10,19 @@
     color: #f9fafb;
     font-size: 1.125rem;
     font-weight: 600;
-    transition: background-color 0.3s cubic-bezier(0.2, 0, 0.2, 1);
+    transition: all 0.3s cubic-bezier(0.2, 0, 0.2, 1);
     white-space: nowrap;
     border: 1px solid transparent;
+    box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.1);
 
     &:hover {
         cursor: pointer;
         background-color: #a855f7;
     }
 
-    &.btn--disabled {
+    &:disabled {
         opacity: 0.5;
+        pointer-events: none;
     }
 
     &.btn--outline {
@@ -39,7 +41,7 @@
         height: 2.125rem;
 
         &:hover {
-            border-color: var(--color-light);
+            background-color: #a855f7;
         }
 
         &.is-active {
