small design changes

--- a/assets/css/base/global.css
+++ b/assets/css/base/global.css
@@ -6,6 +6,7 @@ html {
 body {
     background-color: var(--color-dark);
     color: var(--color-light);
+    font-size: 14px;
 }
 
 /* .hidden-grid-panel {
