--- a/assets/css/components/btn.css
+++ b/assets/css/components/btn.css
@@ -9,11 +9,15 @@
     padding: 0 1.75rem;
     color: #f9fafb;
     font-size: 1.125rem;
-    font-weight: 600;
+    font-weight: 500;
     transition: all 0.3s cubic-bezier(0.2, 0, 0.2, 1);
     white-space: nowrap;
     border: 1px solid transparent;
     box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.1);
+
+    svg {
+        transition: filter 0.3s cubic-bezier(0.2, 0, 0.2, 1);
+    }
 
     &:hover {
         cursor: pointer;
@@ -34,18 +38,37 @@
         }
     }
 
-    &.btn--small {
-        border: 1px solid var(--color-border);
-        padding: 0.25rem 0.625rem;
+    &.btn--secondary {
+        background-color: var(--color-secondary);
+        color: var(--color-background);
+
+        &:hover {
+            background-color: var(--color-dark);
+            color: var(--color-heading);
+
+            svg {
+                filter: invert(100%);
+            }
+        }
+    }
+
+    &.btn--transparent {
         background-color: transparent;
-        height: 2.125rem;
 
         &:hover {
             background-color: #a855f7;
         }
-
         &.is-active {
             background-color: var(--color-primary);
         }
+    }
+
+    &.btn--small {
+        border: 1px solid var(--color-border);
+        padding: 0 0.625rem;
+        height: 2rem;
+
+        font-size: 0.875rem;
+        line-height: 0.9;
     }
 }
