initial survey widget

--- a/assets/css/base/form.css
+++ b/assets/css/base/form.css
@@ -4,6 +4,7 @@ form {
     input[type="number"],
     input[type="email"],
     input[type="password"],
+    textarea,
     select {
         outline: none;
         border-radius: 0.25rem;
