--- a/assets/css/base/form.css
+++ b/assets/css/base/form.css
@@ -34,6 +34,21 @@ form {
         -moz-appearance: textfield;
     }
 
+    input[type="date"]::-webkit-calendar-picker-indicator {
+        filter: invert(90%);
+    }
+
+    /* Fix Chrome autofill turning dark fields white */
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover,
+    input:-webkit-autofill:focus,
+    textarea:-webkit-autofill,
+    select:-webkit-autofill {
+        -webkit-box-shadow: 0 0 0 1000px #111827 inset !important; /* your background color */
+        -webkit-text-fill-color: #fff !important; /* text color */
+        transition: background-color 5000s ease-in-out 0s !important; /* prevents flash */
+    }
+
     label {
         color: #e5e7e8;
         font-weight: 500;
