--- a/assets/css/base/variables.css
+++ b/assets/css/base/variables.css
@@ -8,6 +8,7 @@
     --color-primary: #9333ea;
     --color-secondary: #6ee7b7;
     --color-border: #374151;
+    --color-error: #fb7185;
 
     /* Sizes */
     --container-width: 75rem;
