--- a/assets/css/base/form.css
+++ b/assets/css/base/form.css
@@ -1,9 +1,9 @@
 form {
-    input[type="text"],
-    input[type="date"],
-    input[type="number"],
-    input[type="email"],
-    input[type="password"],
+    input[type='text'],
+    input[type='date'],
+    input[type='number'],
+    input[type='email'],
+    input[type='password'],
     textarea,
     select {
         outline: none;
@@ -29,17 +29,17 @@ form {
         }
     }
 
-    input[type="number"]::-webkit-outer-spin-button,
-    input[type="number"]::-webkit-inner-spin-button {
+    input[type='number']::-webkit-outer-spin-button,
+    input[type='number']::-webkit-inner-spin-button {
         -webkit-appearance: none;
         margin: 0;
     }
 
-    input[type="number"] {
+    input[type='number'] {
         -moz-appearance: textfield;
     }
 
-    input[type="date"]::-webkit-calendar-picker-indicator {
+    input[type='date']::-webkit-calendar-picker-indicator {
         filter: invert(90%);
     }
 
@@ -49,8 +49,9 @@ form {
     input:-webkit-autofill:focus,
     textarea:-webkit-autofill,
     select:-webkit-autofill {
-        -webkit-box-shadow: 0 0 0 1000px #111827 inset !important; /* your background color */
-        -webkit-text-fill-color: #fff !important; /* text color */
+        -webkit-box-shadow: 0 0 0 1000px #111827 inset !important;
+        box-shadow: 0 0 0 1000px #111827 inset !important;
+        -webkit-text-fill-color: #fff !important;
         transition: background-color 5000s ease-in-out 0s !important; /* prevents flash */
     }
 
