--- a/assets/css/components/card.css
+++ b/assets/css/components/card.css
@@ -1,6 +1,3 @@
-.card {
-}
-
 .card-gradient {
     position: relative;
     overflow: hidden;
@@ -25,7 +22,7 @@
     .card-gradient__bg {
         position: absolute;
         inset: 0;
-        background-image: url("/images/card-bg.png");
+        background-image: url('/images/card-bg.png');
         background-repeat: repeat;
         background-size: cover;
         background-size: 160%;
